[package]
name = "untitled13"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.133"
goblin = "0.7"
memmap2 = "0.5"
thiserror = "1.0"
solana_rbpf = "0.4"
